force-app/main/default/objects/Plan_Event_Template__c/Plan_Event_Template__c.object-meta.xml
<CustomObject>
    <description>Curated event template (e.g. Iron Bowl, hurricane, heat wave) used by the Ohanafy Plan scenario engine. Customer admins curate rows in-org; LWCs read via OhfyPlanDataReader.</description>
    <label>Plan Event Template</label>
    <nameField>
        <displayFormat>EVT-{00000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Event Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>