force-app/main/default/objects/Plan_Event_Template__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Event category for LWC chip filter.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sports</fullName>
                <label>Sports</label>
            </value>
            <value>
                <fullName>weather</fullName>
                <label>Weather</label>
            </value>
            <value>
                <fullName>holiday</fullName>
                <label>Holiday</label>
            </value>
            <value>
                <fullName>macro</fullName>
                <label>Macro</label>
            </value>
            <value>
                <fullName>supplier</fullName>
                <label>Supplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>