force-app/main/default/objects/Plan_Event_Template__c/fields/COGS_Delta_Pct__c.field-meta.xml
<CustomField>
    <fullName>COGS_Delta_Pct__c</fullName>
    <description>COGS delta in percent applied to the baseline for the affected month.</description>
    <label>COGS Delta %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>