force-app/main/default/objects/Plan_Event_Template__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>Stable kebab-case identifier (e.g. iron-bowl-2026). External-id key used by the seed loader to upsert.</description>
    <externalId>true</externalId>
    <label>Event Id</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>