force-app/main/default/objects/Plan_Event_Template__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Human-readable label shown in LWC pickers (e.g. "Iron Bowl weekend").</description>
    <label>Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>