force-app/main/default/objects/Plan_Event_Template__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>Calendar month in YYYY-MM format the event applies to.</description>
    <label>Month</label>
    <length>7</length>
    <type>Text</type>
</CustomField>