force-app/main/default/objects/Plan_Event_Template__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-form analyst notes on the event (channel skew, conditions, etc.).</description>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>