force-app/main/default/objects/Plan_Event_Template__c/fields/OpEx_Delta_Abs__c.field-meta.xml
<CustomField>
    <fullName>OpEx_Delta_Abs__c</fullName>
    <description>Absolute OpEx delta in USD thousands applied to the baseline for the affected month.</description>
    <label>OpEx Delta (abs $k)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>