force-app/main/default/objects/Plan_Event_Template__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>State or metro abbreviation (e.g. AL, MOB).</description>
    <label>Region</label>
    <length>40</length>
    <type>Text</type>
</CustomField>