force-app/main/default/objects/Plan_Event_Template__c/fields/Revenue_Delta_Pct__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Delta_Pct__c</fullName>
    <description>Revenue delta in percent applied to the baseline for the affected month (e.g. 9.50 = +9.5%).</description>
    <label>Revenue Delta %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>