force-app/main/default/objects/Plan_Event_Template__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <description>Calendar season — used for narrative grouping in the Copilot.</description>
    <label>Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>spring</fullName>
                <label>Spring</label>
            </value>
            <value>
                <fullName>summer</fullName>
                <label>Summer</label>
            </value>
            <value>
                <fullName>fall</fullName>
                <label>Fall</label>
            </value>
            <value>
                <fullName>winter</fullName>
                <label>Winter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>