force-app/main/default/objects/Plan_Event_Template__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Citation for the event (e.g. "CFBD college football calendar").</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>